complete verifyOTP
